--- a/src/assets/css/_partials/_pages.scss
+++ b/src/assets/css/_partials/_pages.scss
@@ -70,16 +70,26 @@ nav[role="books"] {
 .home {
   .book {
     padding-top: $space-s;
-    @include bp(s) { flex-basis: $grid-1-2; }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @include bp(xsl) {
+      flex-basis: $grid-1-2;
+      padding: $space-s;
+    }
     @include bp(m) { flex-basis: $grid-1-3; }
-    @include bp(l) { padding-top: $space-m; }
+    @include bp(l) { padding: $space-m; }
     @include bp(xl) { flex-basis: $grid-1-4; }
     figure {
-      height: 15rem;
-      @include bp(xl) { height: 22.5rem; }
+      max-height: 15rem;
+      @include bp(xl) { max-height: 22.5rem; }
       img { display: block; }
     }
-    figcaption { margin-top: $space-s; }
+    figcaption {
+      margin-top: $space-s;
+      width: 100%;
+    }
     .book--title { margin: 0 auto; }
   }
 }
@@ -141,13 +151,17 @@ nav[role="books"] {
   .book {
     @include oomph-big;
     min-width: 18.75rem;
-    @include bp(s) {
-      flex-basis: auto;
-      max-width: $grid-1-2;
+    @include bp(xsl) {
+      flex-basis: $grid-1-2;
+      padding: $space-s;
     }
+    @include bp(m) { flex-basis: $grid-1-3; }
+    @include bp(l) { padding: $space-m; }
+    @include bp(xl) { flex-basis: $grid-1-4; }
     figure {
-      height: 10.5rem;
-      @include bp(xl) { height: 15rem; }
+      max-height: 10.5rem;
+      width: auto;
+      @include bp(xl) { max-height: 15rem; }
     }
     figcaption { margin-top: $space-s; }
     .book--title { margin: 0 auto; }
